Add Deepgram fallback provider with runtime provider switching

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+TTS_PROVIDER=deepgram
+DEEPGRAM_API_KEY=your_deepgram_api_key
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
 ELEVENLABS_MODEL_ID=eleven_multilingual_v2
 DAILY_CHAR_LIMIT=5500
@@ -6,5 +8,6 @@ NEXT_PUBLIC_ENABLE_CLOUD_SYNC=false
 # NEXT_PUBLIC_API_BASE_URL=https://natorvoice-api.<your-subdomain>.workers.dev
 # Optional for built-in Next cloud auth/sync endpoints
 # CLOUD_SYNC_JWT_SECRET=replace-with-a-long-random-secret
-# Optional ElevenLabs override
+# Optional provider endpoint overrides
+# DEEPGRAM_BASE_URL=https://api.deepgram.com
 # ELEVENLABS_BASE_URL=https://api.elevenlabs.io
